# node-storage-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/actions/build-push-docker-image/: action.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: build-push-docker-dev.yml  build-push-docker-main.yml  build-push-docker.yml  check-source-branch.yml  integration-test.yml  merge-dependabot.yml  spectral.yml
config/: logging.json
docker/keycloak/: issue-jwt.sh
docker/keycloak/import/: realm-export.json
k8s/: README.md  node-storage-deployment.yaml  node-storage-service.yaml  seaweedfs-deployment.yaml  seaweedfs-service.yaml
k8s/helm/node-storage-service/: .helmignore  Chart.yaml  values.yaml
k8s/helm/node-storage-service/templates/: minio-deployment.yaml  minio-service.yaml  node-storage-deployment.yaml  node-storage-service.yaml  seaweedfs-deployment.yaml  seaweedfs-service.yaml
project/: config.py  crud.py  crypto.py  dependencies.py  event_logging.py  logging.py  main.py  server.py
project/migrations/: 001_init.py
project/migrations/scripts/: create_migration.py  migrate.py  router.py
project/routers/: final.py  intermediate.py  local.py
spectral/: spectral.sh
tests/: conftest.py  docker-compose.yml  test_auth.py  test_final.py  test_intermediate.py  test_local.py  test_local_tagged.py  test_main.py  test_server.py
tests/assets/: alice.pem  alice.pfx
tests/common/: auth.py  env.py  helpers.py
